--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
     "jsonify",
     "klass",
     "labware",
+    "microliters",
     "modbus",
     "pylabrobot",
     "pytest",
@@ -22,20 +23,26 @@
     "usascientific",
     "websockets"
   ],
-  "python.linting.pylintEnabled": true,
-  "python.linting.pylintArgs": ["--disable={c0103}"],
-  "python.linting.mypyEnabled": true,
-  "python.linting.enabled": true,
-  "python.testing.pytestArgs": ["."],
+  "python.testing.pytestArgs": [
+    "."
+  ],
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true,
   "python.testing.autoTestDiscoverOnSaveEnabled": true,
-  "editor.rulers": [100],
+  "editor.rulers": [
+    100
+  ],
   "editor.formatOnSave": true,
   "files.exclude": {
     "**/__pycache__": true
   },
-  "python.testing.unittestArgs": ["-v", "-s", ".", "-p", "*_test.py"],
+  "python.testing.unittestArgs": [
+    "-v",
+    "-s",
+    ".",
+    "-p",
+    "*_test.py"
+  ],
   "[markdown]": {
     "editor.wordWrap": "bounded",
     "editor.wordWrapColumn": 100
