--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ variables:
 
 before_script:
   - python --version
+  - pip install piper[dev]@git+https://gitlab.com/pipettin-bot/pipettin-piper.git
   - pip install .
 
 cache:
