CI: revert to piper[dev]

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,8 @@ variables:
 
 before_script:
   - python --version
-  - pip install .[piper]
+  - pip install piper[dev]@git+https://gitlab.com/pipettin-bot/pipettin-piper.git
+  - pip install .
 
 cache:
   paths:
