--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 # .gitlab-ci.yml
 
-image: python:3.9
+image: mongo:5.0.29-focal
 
 stages:
   - test
@@ -9,10 +9,11 @@ variables:
   PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
 
 before_script:
-  - python --version
-  - pip install deepdiff
-  - pip install piper[dev]@git+https://gitlab.com/pipettin-bot/pipettin-piper.git
-  - pip install .
+  - sudo apt install python3.9
+  - python3.9 --version
+  - pip3.9 install deepdiff
+  - pip3.9 install piper[dev]@git+https://gitlab.com/pipettin-bot/pipettin-piper.git
+  - pip3.9 install .
 
 cache:
   paths:
@@ -21,5 +22,11 @@ cache:
 test:
   stage: test
   script:
-    - pytest pylabrobot/resources/pipettin/
+    - pytest pylabrobot/resources/pipettin/pipettin_tests.py -k 'not test_with_config_mongo'
     - cat /tmp/piper*.log || echo "No logs found."
+
+# test_with_mongo:
+#   stage: test
+#   script:
+#     - pytest pylabrobot/resources/pipettin/pipettin_tests.py::test_with_config_mongo
+#     - cat /tmp/piper*.log || echo "No logs found."
