--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,9 +10,9 @@ variables:
 
 before_script:
   - apt update
-  - apt install python3
+  - apt install -y python3
   - python3 --version
-  - apt install python3.9
+  - apt install -y python3.9
   - python3.9 --version
   - pip3.9 install deepdiff
   - pip3.9 install piper[dev]@git+https://gitlab.com/pipettin-bot/pipettin-piper.git
