--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ variables:
 
 before_script:
   - apt update
-  - apt install -y python3.9
+  - apt install -y python3.9 curl
   - python3.9 --version
   - curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
   - python3.9 get-pip.py
