--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,11 +9,8 @@ variables:
   PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
 
 before_script:
-  - apt update
-  - apt install -y python3.9 curl
-  - python3.9 --version
-  - curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
-  - python3.9 get-pip.py
+  - apt update && apt install -y python3.9 python3.9-distutils curl git
+  - curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py && python3.9 get-pip.py
   - pip3.9 install deepdiff
   - pip3.9 install piper[dev]@git+https://gitlab.com/pipettin-bot/pipettin-piper.git
   - pip3.9 install .
@@ -30,6 +27,21 @@ test:
 
 # test_with_mongo:
 #   stage: test
+#   before_script:
+#     - cp /etc/mongod.conf.orig /etc/mongod.conf
+#     - mkdir -p /var/lib/mongodb
+#     - mongod --fork --config /etc/mongod.conf
+#     - git clone --depth=1 https://gitlab.com/pipettin-bot/pipettin-gui
+#     - cd pipettin-gui/api/src/db/defaults/
+#     - mongoimport --db pipettin --collection platforms --file platforms.json --jsonArray
+#     - mongoimport --db pipettin --collection protocols --file protocols.json --jsonArray
+#     - mongoimport --db pipettin --collection workspaces --file workspaces.json --jsonArray
+#     - mongoimport --db pipettin --collection containers --file containers.json --jsonArray
+#     - mongoimport --db pipettin --collection settings --file settings.json --jsonArray
+#     - mongoimport --db pipettin --collection hLprotocols --file hLprotocols.json --jsonArray
+#     - mongoimport --db pipettin --collection tools --file tools.json --jsonArray
 #   script:
 #     - pytest pylabrobot/resources/pipettin/pipettin_tests.py::test_with_config_mongo
 #     - cat /tmp/piper*.log || echo "No logs found."
+#   after_script:
+#     - pkill mongod
